[package]
name = "foreseer"
version = "0.1.0"
edition = "2021"
authors = ["Rogério Sampaio de Almeida <rsalmei@gmail.com>"]
description = "A Rust weather cache service for playing with axum and Redis"
repository = "https://github.com/rsalmei/foreseer"
readme = "README.md"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.26", features = ["tokio-comp"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
